--- a/kernel-address-book-frontend/package.json
+++ b/kernel-address-book-frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "nuxt -H 0.0.0.0",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "test": "jest test"
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
@@ -19,7 +20,10 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@nuxt/test-utils": "^0.2.2",
     "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.1.0"
+    "@nuxt/typescript-build": "^2.1.0",
+    "jest": "^27.5.1",
+    "playwright": "^1.20.1"
   }
 }
