--- a/kernel-address-book-frontend/package.json
+++ b/kernel-address-book-frontend/package.json
@@ -22,8 +22,6 @@
   "devDependencies": {
     "@nuxt/test-utils": "^0.2.2",
     "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.1.0",
-    "jest": "^27.5.1",
-    "playwright": "^1.20.1"
+    "jest": "^27.5.1"
   }
 }
